# claimcheck

./: .gitignore  LICENSE  README.md  pyproject.toml
paper_verify/: cli.py  diff_proposer.py  hook.py  models.py  reporter.py  verifier.py  waivers.py
paper_verify/extractors/: method_parser.py  tex_extractor.py
paper_verify/resolvers/: code_resolver.py  config_resolver.py  log_resolver.py
tests/: test_hook_e2e.py  test_hook_install.py  test_iter2.py  test_iter3.py  test_resolvers.py  test_tex_extractor.py  test_verifier.py  test_waivers.py
tests/fixtures/: sample.tex
tests/fixtures/multifile/: main.tex
tests/fixtures/multifile/sections/: intro.tex  method.tex
tests/fixtures/sample_configs/: train.py  train.yaml
tests/fixtures/sample_logs/: metrics.json
